tests/lean/slow_error.lean.expected.out
slow_error.lean:4:8: error: type mismatch at application
  a = b
term
  b
has type
  string
but is expected to have type
  caching_user_attribute string
sorry : ?M_1
