tests/lean/slow_error.lean
variable a : caching_user_attribute string
variable b : string

check a = b
